Project

General

Profile

Actions

Bug #20597

closed

`eval('break if false')` should raise SyntaxError but retuns nil

Bug #20597: `eval('break if false')` should raise SyntaxError but retuns nil

Added by tompng (tomoya ishida) over 2 years ago. Updated about 2 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 3.4.0dev (2024-06-27T13:47:22Z master c6a0d03649) [x86_64-linux]
[ruby-core:118398]

Description

These are all SyntaxError (Invalid break, compile error (SyntaxError))

ruby -ce "break if false"
ruby -ce "break if (false)"
ruby -ce "break if nil"
ruby -ce "break if (nil)"
ruby -ce "break if 0>1"

But when it is passed to eval, some of them does not raise SyntaxError but return nil.

eval('break if false') #=> nil
eval('break if (false)') #=> nil
eval('break if nil') #=> nil
eval('break if (nil)') #=> Can't escape from eval with break (SyntaxError)
eval('break if 0>1') #=> Can't escape from eval with break (SyntaxError)

Same behavior with next redo and yield

Actions

Also available in: PDF Atom