Raise a compile error for break/next/redo inside eval in cases where it is optimized away

In cases where break/next/redo are not valid syntax, they should
raise a SyntaxError even if inside a conditional block that is
optimized away.

Fixes [Bug #20597]